--- a/kamaz/css/index.css
+++ b/kamaz/css/index.css
@@ -43,17 +43,13 @@ button:active {
 }
 
 .slider {
-    width: 950px;
+    max-width: 80%;
     border: 2px solid black;
-    margin: 30px auto;
+    margin: 20px auto;
     overflow: hidden;
 }
 
 .slider-line {
-    height: 413px;
-    width: 6650px;
     display: flex;
-    position: relative;
-    left: 0;
     transition: all ease 1s;
 }
