--- a/kamaz/css/index.css
+++ b/kamaz/css/index.css
@@ -22,24 +22,24 @@ h1 {
 button {
     background: none;
     border: none;
-    border-radius: 4px;
+    border-radius: 50%;
     padding: 0;
     font-size: .9rem;
     margin: 10px;
+    max-height: 30px;
 }
 
 button:hover {
-    background: orangered;
+    box-shadow: 0px 0px 10px black;
 }
 
 button:active {
     background: #000;
-    color: #fff;
 }
 
 .slider-btn {
-    width: 30px;
-    height: 30px;
+    max-width: 30px;
+    max-height: 30px;
 }
 
 .slider {
@@ -52,4 +52,9 @@ button:active {
 .slider-line {
     display: flex;
     transition: all ease 1s;
+}
+
+.sl {
+    display: flex;
+    align-items: center;
 }
