--- a/kamaz/css/style.css
+++ b/kamaz/css/style.css
@@ -1,7 +1,7 @@
 body{
     position: relative;
     font-family: 'Noto Sans', sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.4;
     color: #000;
     min-width: 320px;
@@ -11,35 +11,34 @@ body{
 
 .navbar{
     width: 100%;
-    height: 80px;
-    background-color: aliceblue;
+    height: 82px;
+    background-color: #c8cddd;
 }
 
 .navbar .container{
     height: inherit;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
-
-
 
 .navbar-menu{
     display: inline-block;
 }
 
-nav {
-    width: 100%;
-    height: 40px;
-    background-color: beige;
+.navbar .logo{
+    margin-top: 59px;
+    margin-left: 130px;
 }
 
-/* убираем отступы и поля, а также list-style для "ul", 
- * и добавляем "position:relative" */
+nav {
+    width: 100%;
+    height: 56px;
+    background-color: #e5e8f4;
+}
+
+/* убираем отступы и поля, а также list-style для "ul", */
 nav ul {
-    align-self: center;
+    text-align: center;
     padding:0;
-    /*margin-left: 150px;*/
     list-style: none;
     position: relative;
     }
@@ -47,45 +46,61 @@ nav ul {
 /* применяем inline-block позиционирование к элементам навигации */
 nav ul li {
     z-index: 9999999;
-    align-items: center;
-    margin: 0px -7px 0 0;
+    margin: 22px -7px 0 0;
     display:inline-block;
-    background-color: white;
+    
     }
 
-/* стилизуем ссылки */
+/* стилизация ссылки */
 nav a {
     align-self: center;   
     display:block;
-    padding:0 10px;
-    color:darkblue;
+    padding:0 29.6px;
+    color: #637488;
     font: size 16px;
-    line-height: 40px;
+    line-height: 15px;
     text-decoration:none;
 }
 
-/* изменяем цвет фона при наведении курсора */
+/* тут цвет шрифта меняется при наведении курсора */
 nav a:hover {
-    color: orange;
+    color: rgb(255, 166, 0);
         transition: 0.2s;
 }
 nav ul ul {
+    z-index: 9999999;
+    background-color: white;
+    text-align:start;
     display: none;
     position: absolute;
     top: 100%;
+    left: -0.1px;
+
 }
 
 /* отображаем выпадающий список при наведении */
 nav ul li:hover > ul {
     display:inherit;
+    align-self:flex-start;
     width: 100%;
+    left: 0;
 }
 
 /* первый уровень выпадающего списка */
 nav ul ul li {
     min-width:170px;
-    
+    margin-bottom: 20px;
     float:none;
-    display:list-item;
+    display:inherit;
     position: relative;
+}
+
+.column{
+    columns: 4;
+    
+    position:sticky;
+}
+
+.column a{
+    font-size: 14px;
 }
