--- a/kamaz/css/style.css
+++ b/kamaz/css/style.css
@@ -13,6 +13,7 @@ body{
     width: 100%;
     height: 82px;
     background-color: #c8cddd;
+
 }
 
 .navbar .container{
@@ -22,11 +23,12 @@ body{
 
 .navbar-menu{
     display: inline-block;
+    
 }
 
 .phone{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 100%;
     margin-top: 17px;
 }
 
@@ -39,7 +41,8 @@ body{
 
 .navbar .logo{
     margin-top: 59px;
-    margin-left: 130px;
+    margin-left: 1%;
+    text-align: center;
 }
 
 nav {
@@ -57,13 +60,22 @@ nav ul {
     }
 
 /* применяем inline-block позиционирование к элементам навигации */
-nav ul li {
-    z-index: 9999999;
-    margin: 22px -7px 0 0;
-    display:inline-block;
-    
+@media screen and (min-width: 721px) and (max-width: 1920px) {
+    nav ul li {
+        z-index: 9999999;
+        margin: 22px -7px 0 0;
+        display:inline-block;
+        width: 27%;
+        }
     }
-
+@media screen and (min-width: 320px) and (max-width: 720px) {
+    nav ul li {
+        z-index: 9999999;
+        margin: 22px -7px 0 0;
+        display:inline-block;
+        width: 100%;
+        }
+    }
 /* стилизация ссылки */
 nav a {
     align-self: center;   
