--- a/kamaz/css/footerstyle.css
+++ b/kamaz/css/footerstyle.css
@@ -4,14 +4,14 @@ body{
     font-size: 14px;
     line-height: 1.4;
     color: #000;
-    min-width: 320px;
+    min-width: 420px;
     overflow-x: hidden;
     height: auto;
 }
 
 .footer-top-block{
     width: 100%;
-    height: 570px;
+    height: 10%;
     background-color: #c8cddd;
     
 }
@@ -28,8 +28,9 @@ body{
 
 .left-menu{
     width: 100%;
-    position: relative;
-    display:flex;
+    position: center;
+    display:block;
+    
     text-decoration: underline;
     /*justify-content: space-between;*/
 }
@@ -37,26 +38,24 @@ body{
 .name{
     font-weight: bold;
     margin-top: 50px;
+    color: #637488;
+    text-decoration:none ;
+    text-align: center;
 }
 
 menu{
     list-style-type:none;
     padding-left: 0;
+    text-align: center;
+   
 }
 @media screen and (min-width: 721px) and (max-width: 1920px) {
     .right-menu{
-        display: flex;
+        display: block;
         font-size: 12px;
     }  
 }
 
-@media screen and (min-width: 320px) and (max-width: 720px) {
-    .right-menu{
-        display: flex;
-        font-size: 12px;
-        left: 1cm;
-    }
-}
 
 .beba{
     margin-top: 50px;
@@ -76,6 +75,7 @@ menu{
 .boba{
     margin-top: 30px;
     font-weight: bold;
+    color: #637488;
 }
 .mama{
     font-weight: bold;
@@ -83,6 +83,7 @@ menu{
 
 .vismut{
     margin-top: 30px;
+    color: #637488;
 }
 .edal{
     font-size: 24px;
@@ -101,7 +102,7 @@ menu{
 
 .footer-bottom-block{
     width: 100%;
-    height: 136px;
+    height: 15%;
     background-color: #e5e8f4;
 }
 
@@ -113,15 +114,21 @@ menu{
     line-height: 10px;
     text-decoration:none;
     line-height: 140%;
+    width: 100%;
 }
 
 .liscense{
     width: 100%;
     position: relative;
-    display:flex;
+    display:block;
+    color: #637488;
+    height: 20%;
     justify-content: space-between;
 }
 
 .bum{
+    display: block;
     margin-top: 30px;
+    text-align: center;
+    
 }
